director1/director2/director3/Output/compiling_errors.txt
fisier3.c:7:51: error: expected ';' after expression
    printf("Hello World from the third directory")
                                                  ^
                                                  ;
1 error generated.
